syntax = "proto3";
package com.example.token2;

message JoinRequest {
  int32 id = 1;
  string ipAddress = 2;
  int32 port = 3;
}

message JoinResponse {
  int32 id = 1;
  string ipAddress = 2;
  int32 port = 3;
  string message = 4;
}

message Token {
  message Ready {
    int32 id = 1;
    double value = 2;
  }

  message Waiting {
    int32 id = 1;
  }

  message Delete {
    int32 id = 1;
    int32 targetId = 2;
    string targetIpAddress = 3;
    int32 targetPort = 4;
  }

  repeated Ready ready = 1;
  repeated Waiting waiting = 2;
  repeated Delete delete = 3;
}

message Empty {
}

service TokenService {
  rpc joinNetwork(JoinRequest) returns (JoinResponse);
  rpc tokenDelivery(Token) returns (Empty);
}